@@ -19,7 +19,6 @@
 class Paper_book
 {
 public:
-  Protected_scm protect_;
   Array<SCM> headers_;
   Array<SCM> global_headers_;
   Link_array<Paper_def> papers_;
@@ -31,11 +30,7 @@ public:
   Stencil* get_title (int);
   void output (String);
   void classic_output (String);
-
-  SCM smobbed_copy () const;
-
-private:
-  DECLARE_SIMPLE_SMOBS (Paper_book, )
+  DECLARE_SMOBS (Paper_book, )
 };
 
 DECLARE_UNSMOB (Paper_book, paper_book)
